2008-10-30  Alejandro G. Castro	 <alex@igalia.com>

	Fremantle deprecated widgets marked, HILDON_DISABLE_DEPRECATED

	* configure.ac: Added an AM_CONDITIONAL in order to use in the
	Makefile.am, that way we can choose not to compile some examples
	and tests of the deprecated widgets.

	* examples/Makefile.am: Divided the sources in deprecated and
	non-deprecated.

	* src/Makefile.am: Added undef statement of the deprecated
	symbol to the enums file generation process.

	* src/hildon-color-chooser-dialog.c
	* src/hildon-color-chooser-dialog.h
	* src/hildon-color-button.c
	* src/hildon-color-button.h
	* src/hildon-color-chooser.c
	* src/hildon-color-chooser.h
	* src/hildon-controlbar.c
	* src/hildon-controlbar.h
	* src/hildon-date-editor.c
	* src/hildon-date-editor.h
	* src/hildon-hvolumebar.c
	* src/hildon-hvolumebar.h
	* src/hildon-private.c
	* src/hildon-private.h
	* src/hildon-range-editor.c
	* src/hildon-range-editor.h
	* src/hildon-seekbar.c
	* src/hildon-seekbar.h
	* src/hildon-time-editor.c
	* src/hildon-time-editor.h
	* src/hildon-time-picker.c
	* src/hildon-time-picker.h
	* src/hildon-volumebar.c
	* src/hildon-volumebar.h
	* src/hildon-vvolumebar.c
	* src/hildon-vvolumebar.h
	* src/hildon-bread-crumb-trail.h
	* src/hildon-bread-crumb-trail.c
	* src/hildon-calendar-popup.c
	* src/hildon-calendar-popup.h
	* src/hildon-weekday-picker.c:
	* src/hildon-weekday-picker.h:
	* src/hildon-bread-crumb-widget.c:
	* src/hildon-bread-crumb-widget.h:
	* src/hildon-bread-crumb.c:
	* src/hildon-bread-crumb.h:
	* src/hildon-calendar.c:
	* src/hildon-calendar.h:
	* src/hildon-caption.c:
	* src/hildon-code-dialog.c:
	* src/hildon-code-dialog.h:
	* src/hildon-font-selection-dialog.c:
	* src/hildon-font-selection-dialog.h:
	* src/hildon-get-password-dialog.c:
	* src/hildon-get-password-dialog.h:
	* src/hildon-login-dialog.c:
	* src/hildon-login-dialog.h:
	* src/hildon-number-editor.c:
	* src/hildon-number-editor.h:
	* src/hildon-set-password-dialog.c: