@@ -1,3 +1,8 @@
+2008-10-30  Claudio Saavedra  <csaavedra@igalia.com>
+
+	* src/hildon-code-dialog.c: (hildon_code_dialog_init): Fix a
+	compilation warning after the cancel button removal.
+
 2008-10-30  Alejandro G. Castro	 <alex@igalia.com>
 
 	Fremantle deprecated widgets marked, HILDON_DISABLE_DEPRECATED
